# quote-ask-agent

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20250312000000_initial_models.py
app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py
app/agents/: instructions.py  lyra_agent.py  tools.py
app/core/: __init__.py  config.py  constants.py  database.py  logging.py
app/flows/: auto_insurance_quote.json
app/models/: __init__.py  base.py  models.py
app/repositories/: __init__.py  audit.py  base.py  conversation.py  customer.py  document.py  quote.py
app/routers/: admin.py  conversations.py  customers.py  extract.py  health.py  quotes.py  telegram.py
app/schemas/: __init__.py  base.py  conversation.py  customer.py  document.py  extraction.py  quote.py
app/services/: __init__.py  agent_service.py  audit_service.py  checkout_service.py  conversation_service.py  customer_service.py  extraction_service.py  flow_config_service.py  ocr_service.py  quote_service.py  state_service.py
