[project]
name = "quote-ask-agent"
version = "0.1.0"
description = "Telegram-first AI quote intake agent for auto insurance (Lyra) - backend PoC"
authors = [{ name = "Ops Team" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.0.0",
    "openai-agents>=0.2.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

